# GroupProjectMinishell

./: .gitignore  .history_log_lvl_2.txt  1  CMakeLists.txt  Makefile  a.out  check_leaks.sh  error_call.c  file1  file2  ft_isalnum.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_substr.c  logic.c  main.c  minishell  mslib.h
Libft/: Makefile  ft_memcmp.c  ft_memset.c  ft_strncmp.c
builts/: bash.c  cd.c  echo.c  env.c  export.c  pwd.c  unset.c  utils.c
include/: minishell.h  structs_minishell.h
pars/: bslshWorkPage.c  dollarWorkPage.c  error_call.c  exec.c  ft_isalnum.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_substr.c  mslib.h  preUsers.c  quotWorkPage.c  redirWorkPage.c  servFns.c
pars/ms_libft/: ft_isalnum.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_substr.c
source/: .history_log_lvl_2.txt  main.c
source/Libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  (+1 more)
source/builts/: bash.c  cd.c  echo.c  env.c  exit.c  export.c  export_utils.c  lvl.c  pwd.c  unset.c  utils.c
source/logica/: a.out  logic.c
source/pars/: .history_log_lvl_2.txt  bslshWorkPage.c  dollarWorkPage.c  error_call.c  exec.c  preUsers.c  quotWorkPage.c  redirWorkPage.c  safePage.c  safePageII.c  safePageIII.c  servFnc.c  servFncII.c  servFns.c
source/pars/ms_libft/: ft_isalnum.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_substr.c
source/work_pipe/: get_next_line.c  get_next_line_utils.c  path.c  pipex_bonus.c  pipex_bonus_utils.c  pipex_bonus_utils1.c  redirects.c  redirects_utils.c
